maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:11: error: ')' expected but '}' found.
  }
  ^